# texlab

./: Cargo.toml
.github/workflows/: mayhem.yml
benches/: bench_main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_bibtex.rs
mayhem/: Dockerfile  parse_bibtex.mayhemfile
src/: citation.rs  component_db.rs  db.rs  label.rs  lib.rs  options.rs  server.rs
src/citation/: mod.rs
src/db/: analysis.rs  client_capabilities.rs  client_info.rs  client_options.rs  diag.rs  distro.rs  document.rs  location.rs  mod.rs  syntax.rs  workspace.rs
src/db/analysis/: command.rs  environment.rs  explicit_link.rs  graphics_path.rs  implicit_link.rs  label_name.rs  label_number.rs  theorem.rs
src/db/diag/: build_log.rs  syntax.rs
src/distro/: kpsewhich.rs
src/features/: build.rs  chktex.rs  cursor.rs  folding.rs  forward_search.rs  link.rs  mod.rs  symbol.rs
src/features/completion/: acronym_ref.rs  argument.rs  citation.rs  component_command.rs  component_environment.rs  glossary_ref.rs  import.rs  include.rs  label.rs  mod.rs  theorem.rs  user_command.rs  user_environment.rs  util.rs
src/features/definition/: command.rs  document.rs  entry.rs  label.rs  string.rs
src/features/formatting/: bibtex_internal.rs  latexindent.rs  mod.rs
src/features/highlight/: label.rs
src/features/hover/: citation.rs  component.rs  entry_type.rs  field.rs  label.rs  string_ref.rs
src/features/reference/: entry.rs  label.rs  string.rs
src/features/rename/: command.rs  entry.rs  label.rs
src/features/symbol/: bibtex.rs  latex.rs  (+1 more)
src/syntax/: bibtex.rs  latex.rs
(+6 files in other folders)
